assets/css/flexbox.css
/* full page */
.body, html{
    font-size: 100%;
    font-family: "Roboto", "Open Sans";
    background: white;
}

body, html{
    margin:0;
    padding:0;
}

.graytop{
    
    min-height: 25px;
    background: #E5E4E5;
}

/* header */
nav ul{
    list-style: none;
    padding: 0;
    background: #FFF;
}

nav ul li a{
    color: #000;
    text-decoration: none;
    padding: .8rem 1rem;
    display: block;
    line-height:  1;
}

nav ul li{
    border: 0.5px dotted #000;
}
/*Header -> Logo*/
.logo{
    margin-top: -20px;
    padding-left:8px;
}


nav div:first-child h1{
    line-height: 0;
    padding-left: 8px;
    text-align: left;
    
    
}
nav div:first-child h1, nav ul{
    margin: 0.5px;
}

/* Footer */
.footer{
    display:flex;
    flex-direction: column;
    background: #81AA42;
}
.footer_content{
    display:flex;
    flex-direction: column;
    flex-wrap: wrap;
    background: #e4e7de;
}

.item{
    
    padding: 4% 4%;
}

.nospace h4{
    margin-bottom: 0px;
    font-weight: normal;
}
.nospace p{
    margin-top: 0;
}

.baseline{
    display: flex;
    flex-direction: row;
    flex-flow: wrap;
    justify-content: space-between;
}
.baseline, .baseline a{
    color: #FFF;
    text-decoration: none;
    padding: 4%;
}

.footerlogo img{
    max-width: 60%;
}

/* Partner with Us Body */
.body{
    background: white;
    min-height: 500px;
    margin-right: 8px;
    margin-left: 8px;
    display: flex;
    flex-direction: column;
}

.pagetitle{
    background: white;
    padding-bottom: 0px;
    height: 100px;
}

.pagetitle h1{
    color: #688D27;
    padding-left: 8px;
    padding-right: 8px;
    font-weight: 900;
    max-width: 50%;
    padding-bottom: 0px;
    
 }

 .row1{
    display: flex;
    flex-direction: column;
    padding-left: 8px;
    padding-right: 8px;
    
}
.row1_left{
    padding-top: 0px;
}

.row1_left p{
     color: #688D27;;
}

 .row1_right{
    padding-left: 10px;
    padding-right: 10px;
    z-index: 10;
}

 /* Partner with Us Form */
 #contact-form{
    max-width: 480px;
    background: #F6F6F4;
    padding: 20px 5px 20px 5px;
    /*margin-bottom: -50px;*/
    margin-bottom: 20px;
    margin-left: 16px;
    margin-right: 16px;
    
} 

.form_head{
    font-weight: bold;
    padding: 0;
    margin: 0;
}

.text_input{
    width: 95%;
    border: none;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 5px;
    margin-top: 15px;
    margin-bottom: 15px;
}

.submit{
    background-color:#81AA42;
    border: none;
    color: white;
    width:100%;
    font-size: 16px;
    font-weight: bold;
    border-radius: 25px;
    padding-top: 12px;
    padding-bottom: 12px;
}

/*TODO fix the full width image for mobile*/
.row2{
    display: none;
   /* width: 100%;
    background-image: url(../img/design2018/img_partner.png);
    background-size: 100% 100%;
    background-size: cover;*/
    
}

.row2 img{
    display: none;
    /*visibility: hidden;
    max-width: 100%;
    padding-left: -10px;
    padding-right: -10px;
    margin: 0;*/
}

.row3_left h2{
    color: #688D27;
    font-weight: 900;
    max-width: 50%;
}



.row4 a {
    color: #81AA42;
    text-decoration: none;
    
}
.row4 img{
    padding-top: 20px;
}

.pwu_text{
    font-weight: 300;
    margin-top: 0px;
}
.section_head{
    font-weight: 800;
    margin-bottom: 0px; 
}
.img_right{
    display: flex;
    flex-direction: column;
    align-content: space-between;
    background: white;
    padding-left: 8px;
    padding-right: 8px;
    padding-bottom: 50px;
    padding-top: 50px;
    
}
.img_left{
    background: white;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-left: 8px;
    padding-right: 8px;
    padding-bottom: 50px;
}

.img_left > .col1{ order:3;}
.img_left > .col2{ order:1;}
.img_left > .col3{ order:2;}

.privacy_body{
    
    padding-left: 8px;
    padding-right: 8px;
}


    /*Styling for larger devices*/
    @media only screen and (min-width:480px){
        #container{
            max-width: 1200px;
            background:lightgray;
            margin: 0 auto;
        }
        .graytop{
            display: none;
        }
        
        body, html{
            font-size: 100%;
            font-family: "Roboto", "Open Sans";
            background: lightgray;
        }
        
        
        /* Header */
        .header{
            background: lightgray;
            margin-left: 32px;
            margin-right: 32px;
            margin-top:32px;
            
            
        }
        nav{
            display: flex;
            justify-content: space-between;
            align-items: center;
            padding-bottom: 30px;
            background: white;
            padding-left: 64px;
            padding-right: 64px;
        }
        nav ul {
            display: flex;
            justify-content: space-between;
            align-items: center;
            background: none;
            flex-wrap: wrap;
            
        }

        nav div:first-child h1{
            padding: 0;
        }

        nav div:first-child img{
            width: 160px;
            margin-top: -15px;
        }

        nav ul li{
            border-bottom: none; 
            flex: 1 0 auto;
            position: relative;
            border: none;
        }

        nav ul li a{
            padding-left: 0.5rem;
            padding-right: 0.5rem;
            padding-bottom: 0; 
        }

        nav ul li a::after, nav ul li a::before{
            content: "";
            position: absolute;
            bottom: 0;
            right:0;
            width:0%;
            height: 2px;
            background: #81AA42;
            transition: ease-in-out;
        }

        nav ul li a::before{
            left:0;
        }

        nav ul li a:hover::after, 
        nav ul li a:hover::before{
            width: 50%;
        }
        
        /*    Footer    */
        .footer{
            background-color: #81AA42;
            display:flex;
            flex-direction: column;
            justify-content: center;
            padding-left: 72px;
            padding-right: 72px;
            padding-bottom: 0;
            
        }

        .footer_content{
            display:flex;
            flex-direction: row;
            flex-wrap: wrap;
            justify-content: space-around;
            background: #e4e7de;
            margin-top: -100px;
            padding-left: 0px;
            padding-right: 0px;
        }

        .item{
            max-width: 320px;
            padding-left: 32px;
        }

        .baseline{
            display: flex;
            padding-top: 25px;
            padding-left: 0px;
            padding-right: 0px;
        }

        .baseline, .baseline a{
            color: #FFF;
            text-decoration: none;
        }

        .privacy{
            min-width: 300px;
            text-align: right;
            padding-right: 0px; 
        
        }

        /* partner with us Body */
        .body{
            background: lightgray;
            min-height: 500px;
            margin-right: 32px;
            margin-left: 32px;
            display: flex;
            flex-direction: column;
            
        }
        
        .pagetitle h1{
            color: #688D27;
            padding-left: 0px;
            font-weight: 900;
        }

        .pagetitle{
            background: white;
            padding-left: 64px;
            padding-right: 64px;
            height: 50px;
            padding-bottom: 10px;
        }

        .row1{
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            padding-left: 64px; 
            padding-right: 64px;
            background: white;
            margin-bottom: -25px;
            z-index: 1;
        }

        .row1_left p{
            color: #688D27;
            max-width: 420px;
        }

        .row1_right{
            max-width: 420px;
            display: flex;
            justify-content: flex-end;
        }

        /* Partner with Us Form */
        #contact-form{
            margin-top: 20px;
            max-width: 240px;
            background: #F6F6F4;
            padding: 25px 5px 25px 5px;
            margin-bottom: -100px;
        
        } 
        .form_head{
            font-weight: bold;
            padding: 0;
            margin: 0;
        }

        .text_input{
            width: 95%;
            border: none;
            padding-top: 5px;
            padding-bottom: 5px;
            padding-left: 5px;
            margin-top: 15px;
            margin-bottom: 15px;
        }

        .submit{
            background-color:#81AA42;
            border: none;
            color: white;
            width:100%;
            font-size: 16px;
            font-weight: bold;
            border-radius: 25px;
            padding-top: 12px;
            padding-bottom: 12px;
        }

        /*    Row 2   */
        .row2{
            width: 100%;
            background-image: url(../img/design2018/img_partner.png);
            background-size: cover;
            z-index: 0;
            display:block;
        }

        .row2 img{
            visibility: hidden;
            max-width: 100%;
            padding: 0;
            margin: 0;
            display: inline-block;

        }

        /*     ROW 3   */
        .row3{
            background: transparent;
            display: flex;
            align-content: space-between;
            padding-left: 64px;
            padding-right: 50px;
            background: white;
            z-index: 1;
        }

        .row3_left{
            background: white;
            flex: 1;
            margin-top: -25px;
            margin-left: 0;
            max-width: 420px;
        }

        .row3_left h2{
            vertical-align: middle;
            text-align: center;
            font-weight: 900;
            max-width: 100%;
            background: white;
        }

        .pwu_text{
            max-width: 340px;
            padding-left: 32px;
            padding-right: 32px;
        }

        .pwu_icon{
            padding-top: 25px;
        }
        
        /* Proven Outcomes */
        .img_right{
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            background: white;
            padding-left: 64px;
            padding-right: 64px;
            padding-bottom: 50px;
            padding-top: 50px;
        }

        .img_right div:last-child{
            margin-left: auto;
        }
        .row4_col2{
            padding-left:32px;
        }
        
        .row4_col3{
            padding-right: 0px;
        }

        /* Leveraging Your Budget*/
        .img_left{
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            background: #F6F6F6;
            padding-left: 64px;
            padding-right: 64px;
            padding-top: 50px;
            padding-bottom: 50px;
        }
        .img_left > .col1{
             order:1;
             padding-right: 32px;
            }
        .img_left > .col2{ order:2;}
        .img_left > .col3{ order:3;}
        
        .img_left div:first-child{
            margin-right: auto;
        }
        .row7{
            padding-bottom: 125px;
            
        }
        .privacy_body{
            background: white;
            padding-left: 64px;
            padding-right: 64px;
            padding-bottom: 125px;
           
            
        }
        .privacy_body h2, .privacy_body h4, .privacy_body li, .privacy_body p{
            
            max-width: 800px;
           
        }
        
}

